# mori

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.builder  Makefile  README.md  build.rs
.github/workflows/: audit.yaml  ci.yaml  docker-builder.yaml  release.yaml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: child_process_tracking.md  cli_architecture.md  cli_spec.md  design.md  development_guide.md  docker_build.md  ebpf_cgroup_architecture.md  file_access_and_child_tracking_design.md  file_access_control_design.md  policy-design.md  reuse_plan.md  roadmap.md  sequence_diagrams.md
mori-bpf/: Cargo.toml  build.rs
mori-bpf/.cargo/: config.toml
mori-bpf/src/: main.rs  vmlinux.rs
src/: error.rs  lib.rs  main.rs  policy.rs
src/cli/: args.rs  config.rs  loader.rs  mod.rs
src/net/: cache.rs  mod.rs  parser.rs  resolver.rs
src/policy/: file.rs  mod.rs  model.rs  net.rs  process.rs
src/runtime/: linux.rs  macos.rs  mod.rs
src/runtime/linux/: cgroup.rs  dns.rs  ebpf.rs  file.rs  mod.rs  refresh.rs  sync.rs
tests/e2e/: README.md  run_tests.sh  test_file_access.sh  test_linux.sh  test_macos.sh  test_network_linux.sh
