[workspace]
members = [
    "mori-bpf",
]
resolver = "2"

[package]
name = "mori"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
hickory-resolver = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"
aya-log = "0.2.1"

[dev-dependencies]
rstest = "0.23"
mockall = "0.13"
tempfile = "3.10"

[build-dependencies]
aya-build = "0.1.2"
