[workspace]
members = ["mori-bpf"]
resolver = "2"

[package]
name = "mori"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
hickory-resolver = { version = "0.25", features = ["system-config"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = [
	"rt-multi-thread",
	"macros",
	"sync",
	"time",
	"process",
] }
async-trait = "0.1.89"
nix = { version = "0.30.1", features = ["process"] }
libc = "0.2.176"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"
aya-log = "0.2.1"

[dev-dependencies]
rstest = "0.26"
mockall = "0.13"
tempfile = "3.10"

[build-dependencies]
aya-build = "0.1.2"
